--- a/Aula06.ipynb
+++ b/Aula06.ipynb
@@ -1471,9 +1471,7 @@
    },
    "outputs": [],
    "source": [
-    "\n",
-    "all_data['MSSubClass'] = all_data['MSSubClass'].fillna(\"None\")\n",
-    "\n"
+    "all_data['MSSubClass'] = all_data['MSSubClass'].fillna(\"None\")"
    ]
   },
   {
@@ -1728,7 +1726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 81,
    "metadata": {
     "_cell_guid": "0a75646f-1974-40ad-a085-ff7bc08454a5",
     "_execution_state": "idle",
@@ -1738,6 +1736,15 @@
    "source": [
     "train = all_data[:ntrain]\n",
     "test = all_data[ntrain:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ntrain=1200"
    ]
   },
   {
@@ -1805,7 +1812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 82,
    "metadata": {
     "_cell_guid": "f396260b-e182-4a87-9a2a-b92b9375ea6f",
     "_execution_state": "idle",
